--- a/index.html
+++ b/index.html
@@ -33,12 +33,6 @@
             <div class="row unitData" id="unitData">
                 <div class="col-5">
                     <div id="unitInfo" class="row unitInfo">
-                        <!-- <div class="col-2">
-                            <img class="unitImg" src="img/iconID1.svg" alt="" />
-                        </div>
-                        <div class="col-10">
-                            <h1>Аналитические весы OHAUS Adventurer АХ324 (B715976163)</h1>
-                        </div> -->
                     </div>
                     <div id="reportFilters" class="col-8">
                         <form id="filters">
@@ -79,10 +73,10 @@
                 <div><span>Эксплуатирующее подразделение: </span> </div>
                 <div><span>МОЛ: </span></div>
                 <div><span>Территория: </span></div>
-                <div><span>Серийный номер: </span></div>
-                <div><span class="IDs">GUID: </span></div>
-                <div><span class="IDs">Bims ID: </span></div>
-                <div><span class="IDs">Tam: </span></div>
+                <div><span >Серийный номер: </span></div>
+                <div><span >GUID: </span></div>
+                <div><span >Bims ID: </span></div>
+                <div><span >Tam: </span></div>
             </div>
 
         </div>
